--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/bot.ts",
-    "start": "tsx src/bot.ts"
+    "build": "tsc -p .",
+    "start": "node --enable-source-maps dist/bot.js",
+    "start:dev": "tsx src/bot.ts",
+    "postbuild": "npm prune --omit=dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ccxt": "^4.5.5",
+    "ccxt": "^4.5.6",
     "dotenv": "^17.2.2",
     "node-fetch": "^3.3.2",
     "technicalindicators": "^3.1.0",
