불장 알림 빈도 낮추기

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,11 @@ DYN_STOP_BUFFER_BPS=80
 # Bull-mode
 BULL_MODE=auto
 BULL_EMA_GAP_BPS=40
+# Hysteresis and min-hold to reduce frequent toggling
+BULL_EMA_GAP_ENTER_BPS=40
+BULL_EMA_GAP_EXIT_BPS=25
+BULL_MIN_HOLD_SEC=300
+FLAT_MIN_HOLD_SEC=300
 TP1_SELL_FRAC=0.5
 TP1_SELL_FRAC_BULL=0.3
 TP2_BULL=0.035
