쿨다운 알림 자체를 끄는 옵션 추가

--- a/.env.example
+++ b/.env.example
@@ -71,4 +71,6 @@ NEWS_BLOCK_IF_NEGATIVE_COUNT=3
 NEWS_REFRESH_MIN=5
 NEWS_FILTER_LOG_ONLY=false
 NEWS_FILTER_DISABLE_IN_BULL=true
+# Notification throttle (minutes) for cooldown messages
+COOLDOWN_NOTICE_MIN=5
 # NOTE: NEWS_BULL_DISABLE_LOG_MIN has been removed (event-based notifications now)
