--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,19 @@ HOLD_ABOVE_BREAKOUT_MS_BULL=500
 MAX_BREAKOUT_EXTENSION_BPS=0
 MAX_BREAKOUT_EXTENSION_BPS_BULL=80
 
+# Higher timeframe and quality filters
+USE_HTF_FILTER=true
+HTF_TF=15m
+HTF_EMA_FAST=20
+HTF_EMA_SLOW=60
+HTF_GAP_BPS=20
+ATR_PERIOD=14
+ATR_MAX_PCT=0.02
+RSI_PERIOD=14
+RSI_OVERBOUGHT=72
+RSI_OVERBOUGHT_BULL=78
+REQUIRE_DOUBLE_CLOSE=false
+
 # News filter
 USE_NEWS_FILTER=true
 NEWS_FEEDS=https://www.coindeskkorea.com/rss/allArticle.xml,https://coinness.live/api/news/flash?format=rss
