--- a/.env.example
+++ b/.env.example
@@ -87,3 +87,9 @@ NEWS_FILTER_DISABLE_IN_BULL=true
 # Notification throttle (minutes) for cooldown messages
 COOLDOWN_NOTICE_MIN=5
 # NOTE: NEWS_BULL_DISABLE_LOG_MIN has been removed (event-based notifications now)
+
+# Daily loss-based halt
+# Halt new entries after N losing trades on the same KST day; 0 disables
+HALT_AFTER_N_LOSSES=0
+# If true, send the halt notice only once per day
+HALT_NOTIFY_ONCE=true
