뉴스 필터링 제거

--- a/.env.example
+++ b/.env.example
@@ -75,18 +75,12 @@ RSI_OVERBOUGHT=72
 RSI_OVERBOUGHT_BULL=78
 REQUIRE_DOUBLE_CLOSE=false
 
-# News filter
-USE_NEWS_FILTER=true
-NEWS_FEEDS=https://www.coindeskkorea.com/rss/allArticle.xml,https://coinness.live/api/news/flash?format=rss
-NEWS_NEGATIVE_KWS=급락,하락,규제,해킹,보이스피싱,점검,중단,상장폐지,의혹,금리,디파이,대규모,청산,청문,경고,제재,벌금,소송,파산,유동성,악재,dump,plunge,ban,regulation,hack,exploit,phishing,outage,halt,delist,investigation,warning,sanction,fine,lawsuit,bankruptcy,liquidity,liquidation,risk
-NEWS_WINDOW_MIN=60
-NEWS_BLOCK_IF_NEGATIVE_COUNT=3
-NEWS_REFRESH_MIN=5
-NEWS_FILTER_LOG_ONLY=false
-NEWS_FILTER_DISABLE_IN_BULL=true
 # Notification throttle (minutes) for cooldown messages
 COOLDOWN_NOTICE_MIN=5
-# NOTE: NEWS_BULL_DISABLE_LOG_MIN has been removed (event-based notifications now)
+# NOTE: News filter has been removed from codebase
+
+# Admin switches
+DISABLE_BUY=false
 
 # Daily loss-based halt
 # Halt new entries after N losing trades on the same KST day; 0 disables
