손절 빈도 감소

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,8 @@ TP1=0.012
 TP2=0.022
 TRAIL=-0.015
 USE_BEP_AFTER_TP1=true
+# Raise stop to fee-safe breakeven after TP1
+USE_FEE_SAFE_BEP=true
 
 # Dynamic stop
 USE_DYNAMIC_STOP=true
@@ -87,3 +89,7 @@ DISABLE_BUY=false
 HALT_AFTER_N_LOSSES=0
 # If true, send the halt notice only once per day
 HALT_NOTIFY_ONCE=true
+
+# Daily profit cap (optional). Stop new entries after reaching this net PnL ratio of base capital.
+DAILY_NET_PROFIT_CAP_PCT=0
+DAILY_PROFIT_NOTIFY_ONCE=true
