쿨다운 완화

--- a/.env.example
+++ b/.env.example
@@ -86,8 +86,12 @@ DISABLE_BUY=false
 
 # Daily loss-based halt
 # Halt new entries after N losing trades on the same KST day; 0 disables
-HALT_AFTER_N_LOSSES=0
-# If true, send the halt notice only once per day
+HALT_AFTER_N_LOSSES=2
+# Halt behavior: "day" = stop all day, "cooldown" = pause only for N minutes
+HALT_MODE=cooldown
+# When HALT_MODE=cooldown, pause new entries for N minutes after threshold
+DAILY_LOSS_COOLDOWN_MIN=60
+# If true, dedupe halt notice (day mode: once/day; cooldown mode: once per window)
 HALT_NOTIFY_ONCE=true
 
 # Daily profit cap (optional). Stop new entries after reaching this net PnL ratio of base capital.
