분석기능 추가

--- a/.env.example
+++ b/.env.example
@@ -25,11 +25,11 @@ KILL_SWITCH=false
 USE_REGIME_FILTER=true
 BREAKOUT_LOOKBACK=6
 BREAKOUT_TOL_BPS=15
-ENTRY_SLIPPAGE_BPS=30
+ENTRY_SLIPPAGE_BPS=18
 
 # Exits
-TP1=0.012
-TP2=0.022
+TP1=0.009
+TP2=0.020
 TRAIL=-0.015
 USE_BEP_AFTER_TP1=true
 # Raise stop to fee-safe breakeven after TP1
@@ -38,7 +38,7 @@ USE_FEE_SAFE_BEP=true
 # Dynamic stop
 USE_DYNAMIC_STOP=true
 DYN_STOP_TIGHTEN_AFTER_TP1=true
-DYN_STOP_BUFFER_BPS=80
+DYN_STOP_BUFFER_BPS=90
 
 # Bull-mode
 BULL_MODE=auto
@@ -52,8 +52,8 @@ TP1_SELL_FRAC=0.5
 TP1_SELL_FRAC_BULL=0.3
 TP2_BULL=0.035
 TRAIL_BULL=-0.03
-ENTRY_SLIPPAGE_BPS_BULL=60
-DYN_STOP_BUFFER_BPS_BULL=150
+ENTRY_SLIPPAGE_BPS_BULL=35
+DYN_STOP_BUFFER_BPS_BULL=160
 QUIET_HOUR_BULL_OVERRIDE=true
 
 # Entry gates (conservative)
@@ -97,3 +97,7 @@ HALT_NOTIFY_ONCE=true
 # Daily profit cap (optional). Stop new entries after reaching this net PnL ratio of base capital.
 DAILY_NET_PROFIT_CAP_PCT=0
 DAILY_PROFIT_NOTIFY_ONCE=true
+
+# Analytics (optional)
+ENABLE_ANALYTICS=true
+TRADE_LOG_FILE=analytics/trades.log
